added intent for detail activity and added setting activity with default xmls

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.terminali.sunshine.app.MainActivity">
+    android:id="@+id/container"
+    tools:context="com.example.terminali.sunshine.app.MainActivity" tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
